fixed jumping problem and not having a tall enough vertical bar

--- a/src/css/base.css
+++ b/src/css/base.css
@@ -415,7 +415,7 @@ div[data-react-toolbox=dialog] > section{
     /*background-image:url('./dots.gif');*/
   /*background-color:rgba(100,100,100,0.5);*/
    background-color:rgba(57,255,20,1);
-    height:100%;
+    height:1000px;
     width:1px;
     margin-left: -8px;
     visibility: visible;
